	from occurring while the quick index is missing.  Remove the option to
	not build the quick index.
	* lib/rubygems/commands/generate_index_command.rb: --no-quick is gone.
	* lib/rubygems/user_interaction.rb: If stdin is not a tty, it is
	unlikely that gem is going to get a response when asking a question.
	Patch #10660 by Paul Brannan.

2007-07-23  Eric Hodel  <drbrain@segment7.net>

	* lib/commands/contents_command.rb: Add --lib-only option, remove
	useless --list option.  Feature request #9498 by Martin DeMello.
	* lib/rubygems/specification.rb: Restrict to only files in
	#require_paths.  Add #required_rubygems_version.  Feature request
	#7780 by Eric Hodel.
	* lib/rubygems/commands/dependency_command.rb: Display dependencies for
	remote gems.  Feature request #12133 by Eric Hodel.  -r for reverse
	dependencies is now -R.
	* lib/rubygems/commands/specification_command.rb: Display
	specifications for remote gems.  Feature request #12133 by Eric Hodel.
	* lib/rubygems/installer.rb (Gem::Installer#install): Check
	required_rubygems_version.
	* lib/rubygems/user_interaction.rb
	(Gem::UserInteraction#choose_from_list): Check result for EOF.  Fixes
	bug #8018.  Patch by Jos Backus.
	* post-install.rb: Install using absolute path.  Fixes bug #10675.
	Patch by Jeremy Burks.
	* lib/rubygems/commands/environment_command.rb: Add RUBY VERSION to
	environment output.
	* lib/rubygems/command.rb: Don't worry about duplicated command-line
	options, OptionParser takes care of them for us.

2007-07-22  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb (Gem::Specification#files): Make it
	faster
	* lib/rubygems/command.rb: Better documentation.  -v flag now lets you
	get to "really verbose" mode which makes the verbose progress meter
	work.  Add command groups to separate types of commands easily.
	* lib/rubygems/commands/which_command.rb, bin/gemwhich: Move `gemwhich`
	under `gem`.
	* lib/rubygems/commands/mirror_command.rb, bin/gem_mirror: Move